--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ionic": "^2.2.3",
     "mint-ui": "^2.2.5",
     "vue": "^2.2.6",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
